change layer title

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@
 
 /* Resistance Control Area */
 .resistance-control::before {
-  content: 'Resistance-controlled Areas';
+  content: 'Contestation and Control Across Myanmar';
   display: block;
   font-weight: bold;
   font-size: 1.2em;
